# kclaw-openclaw-releases

./: .gitignore  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
docs/: customization.md  quick-start.md
manager-app/: index.html  package-lock.json  package.json  vite.config.ts
manager-app/src/: App.tsx
manager-app/src-tauri/: Cargo.toml  tauri.conf.json
manager-app/src-tauri/icons/: icon.icns
manager-app/src-tauri/src/: lib.rs  main.rs
manager-app/src-tauri/src/commands/: config.rs  diagnostics.rs  mod.rs  service.rs
manager-app/src-tauri/src/models/: mod.rs
manager-app/src-tauri/src/utils/: mod.rs
manager-app/src/components/AIConfig/: AIConfig.tsx
manager-app/src/components/Channels/: Channels.tsx
manager-app/src/components/Dashboard/: Dashboard.tsx
manager-app/src/components/Layout/: Sidebar.tsx
manager-app/src/config/: brand.ts
manager-app/src/stores/: appStore.ts
manager-app/src/styles/: globals.css
scripts/: build-linux.sh  build-mac.sh  build-windows.ps1
