[package]
name = "kclaw-manager"
version = "1.0.0"
description = "KClaw OpenClaw Manager - AI Gateway Management Tool"
authors = ["KClaw"]
edition = "2021"

[lib]
name = "kclaw_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
